--- a/Collections-TableView/Base.lproj/Main.storyboard
+++ b/Collections-TableView/Base.lproj/Main.storyboard
@@ -1,24 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="uHM-de-qgo">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--First Table View Controller-->
+        <scene sceneID="Wvo-zR-uvu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="86e-Kx-OYb" customClass="FirstTableViewController" customModule="Collections_TableView" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" id="o0j-Nd-Eke">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <connections>
+                            <outlet property="dataSource" destination="86e-Kx-OYb" id="HjF-CY-cmc"/>
+                            <outlet property="delegate" destination="86e-Kx-OYb" id="3Se-Vz-cw8"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="8bA-Mm-xx6"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="i5U-QH-WUX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1923.0769230769231" y="201.89573459715638"/>
+        </scene>
+        <!--Second Table View Controller-->
+        <scene sceneID="emM-eP-hMh">
+            <objects>
+                <tableViewController id="UQN-Kc-plt" customClass="SecondTableViewController" customModule="Collections_TableView" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" id="LYg-uR-9hc">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <connections>
+                            <outlet property="dataSource" destination="UQN-Kc-plt" id="Osp-Jh-4dD"/>
+                            <outlet property="delegate" destination="UQN-Kc-plt" id="PaG-XE-ATF"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="Fzp-p2-iu2"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LPL-DG-Vpj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1923" y="943"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="HBd-rq-TGL">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JsS-Ow-PEF" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="ApL-VJ-PJ2"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5ib-1B-bXa">
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="86e-Kx-OYb" kind="relationship" relationship="rootViewController" id="d2c-Z2-mXF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eU4-f4-Mx3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="993.84615384615381" y="201.89573459715638"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="Ypu-lH-7Ih">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="86C-3o-uLB" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="RQm-k6-fDU"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="kaq-92-8Xi">
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="UQN-Kc-plt" kind="relationship" relationship="rootViewController" id="52S-J4-Zrj"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="b4L-vo-Mxt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="994" y="943"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="1Pk-2N-RWc">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="uHM-de-qgo" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="BwM-oR-Gkg">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="JsS-Ow-PEF" kind="relationship" relationship="viewControllers" id="KmT-lh-OJF"/>
+                        <segue destination="86C-3o-uLB" kind="relationship" relationship="viewControllers" id="dDx-OK-81V"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hRN-2C-K8G" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-260" y="557"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
